2009-07-04  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm (uncolor): When reporting errors for bad escape
	sequences, don't include the leading \e[ or trailing m in the
	error message.

	* ANSIColor.pm: Add section headings to the DESCRIPTION section of
	the module since it's getting rather long.
	(colorstrip): New function to remove ANSI color codes from
	strings.  Thanks, Paul Miller.

	* t/basic.t: New tests for colorstrip.

	* ANSIColor.pm (AUTOLOAD): Untaint $AUTOLOAD, required by Perl
	5.10 when running in taint mode.  Thanks, Tim Bellinghausen.
	* t/basic.t: Two new tests for AUTOLOAD error handling.  Enable
	warnings and taint mode.

2009-02-28  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Version 2.00 released.

	* Makefile.PL: Add LICENSE to the distribution metadata for Perl
	5.10 and later.

	* ANSIColor.pm: Add explicit return statements instead of relying
	on the implicit return of the last expression.  Use all caps for
	all global variables.

	* ANSIColor.pm: Add the new functions to a :pushpop export tag.
	(PUSHCOLOR): New function that stores in an internal stack the
	attributes that are being set.
	(POPCOLOR): New function that pops the attributes being set and
	sets the attributes previously found on the stack.
	(LOCALCOLOR): New function that surrounds its argument in
	PUSHCOLOR and POPCOLOR.
	(AUTOLOAD): If $AUTOLOCAL is set, surround all color constants
	with an implicit LOCALCOLOR.
	* t/basic.t: Test PUSHCOLOR, POPCOLOR, and LOCALCOLOR.

	* t/pod-spelling.t: Rewrite to use Test::More.  Support and prefer
	aspell.

	* ANSIColor.pm: Fix additional spelling errors and rewrap the POD
	documentation to a 74-character margin.

	* t/basic.t: Rewrite to use Test::More.
	* t/pod.t: Likewise.

	* ANSIColor.pm (AUTOLOAD): If ANSI_COLORS_DISABLED is set, return
	the stringified arguments rather than creating a sub.  This allows
	colors to work later if ANSI_COLORS_DISABLED is unset rather than